solucionado bug de caracteres especiales