@@ -1,8 +1,9 @@
 package com.HackABoss.LereahSol_pruebatec2.logica;
 
 import com.HackABoss.LereahSol_pruebatec2.persistencia.ControladoraPersistencia;
-import java.util.ArrayList;
+import java.util.Date;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Controladora {
 
@@ -26,11 +27,10 @@ public class Controladora {
 
     public boolean ciudadanoExiste(String dni, String apellido) {
         boolean existe;
-        List<Ciudadano> listaCiuda = controlPersis.mostrarCiudadanos();
-        List<Ciudadano> ciudaEncontrado = listaCiuda.stream()
+        List<Ciudadano> ciudaEncontrado = controlPersis.mostrarCiudadanos().stream()
                 .filter(c -> c.getDni().equalsIgnoreCase(dni))
                 .filter(c -> c.getApellido().equalsIgnoreCase(apellido))
-                .toList();
+                .collect(Collectors.toList()); 
         existe = !ciudaEncontrado.isEmpty();
         return existe;
     }
@@ -60,6 +60,16 @@ public class Controladora {
     //Eliminar
     public void cancelarTurno(Long id) {
         controlPersis.cancelarTurno(id);
+    }
+
+    public List<Turno> filtrarTurnos(Date fecha, String estado) {
+
+        List<Turno> turnosFiltrados = controlPersis.mostrarTurnos().stream()
+                .filter(t -> t.getFecha().equals(fecha)) 
+                .filter(t -> t.getEstado().equals(estado)) 
+                .collect(Collectors.toList()); 
+        return turnosFiltrados;
+
     }
 
 }
